--- a/app/caries.html
+++ b/app/caries.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content  wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Лечение кариеса зубов</div>
                         <p class="content__desc">Суть лечения кариеса сводится к иссечению и удалению пораженных кариесом твердых тканей зубов с последующим их пломбированием.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround  wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-1.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Суть лечения кариеса сводится к иссечению и удалению пораженных кариесом твердых тканей зубов с последующим их пломбированием. Задача доктора заключается в обезболивании, правильном препарировании тканей зуба и последующем наполнении образовавшейся полости композитным материалом. 
                         </p>
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Обработка кариозной полости без адекватного охлаждения водно-воздушным спреем из наконечника может привести к микроожогам пульпы зуба (нерв), что может привести к асептическому воспалению пульпы. Довольно часто после пломбирования глубокой кариозной полости возникают ощущения при накусывании и кратковременная боль на холод.
                         </p>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-botom">
+                    <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -160,12 +160,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="img-top">
+                    <div class="img-top wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Глубокий кариес</div>
                         <div class="title">Estelite, <br /> Filtek-Ultimaate, Charisma</div>
                         <p class="content__desc">
