--- a/app/dental-canal-treatment.html
+++ b/app/dental-canal-treatment.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Лечение каналов зубов</div>
                         <p class="content__desc">Лечение каналов зубов или эндодонтическое лечение является самой сложной процедурой в терапевтической стоматологии.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/dental-1.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div class="img-row-botom left">
+                    <div class="img-row-botom left wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/dental-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Это происходит потому, что врач не может на 100% точно предположить даже количество каналов в зубе, уже не говоря об их расположении, направлении, изгибах, боковых ответвлениях, длине и т. д. 
                         </p>
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Лечение</div>
                         <div class="title">Эндомотор</div>
                         <p class="content__desc">Слово «экономия» никак не относится к нашей клинике. Минимальный набор оборудования для качественного лечения каналов это :</p>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/dental-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -172,12 +172,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="img-center">
+                    <div class="img-center wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/dental-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Высушивание каналов</div>
                         <div class="title">Dentsply</div>
                         <p class="content__desc">
