--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,13 @@
                                 <li class="menu__item">
                                     <a href="reviews.html" class="menu__link">Отзывы</a>
                                 </li>
+                                <div class="phone modile-phone">
+                                    <img src="./img/phone-icon.svg">
+                                    <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                                    <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                                </div>
                             </ul>
+                            <div class="menu__bg"></div>
                         </div>
                         <div class="col-lg-2">
                             <div class="phone">
@@ -99,81 +105,132 @@
                                 <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                                 <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                             </div>
+                            <div class="btn_mnu">
+                                <div class="btn_row"></div>
+                                <div class="btn_row"></div>
+                                <div class="btn_row"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 relative">
-                        <div class="main-carousel">
-                            <div>
-                                <div class="main-carousel__item">
-                                    <div class="row">
-                                        <div class="col-lg-5">
-                                            <div class="sign-up">
-                                                <div class="sub-title">Современная техника</div>
-                                                <div class="title">Безопасность клиента <br /> наш девиз</div>
+            <div class="desctop-card">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 relative">
+                            <div class="main-carousel">
+                                <div>
+                                    <div class="main-carousel__item">
+                                        <div class="row">
+                                            <div class="col-lg-5">
+                                                <div class="sign-up">
+                                                    <div class="sub-title">Современная техника</div>
+                                                    <div class="title">Безопасность клиента <br /> наш девиз</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="main-carousel__item">
+                                        <div class="row">
+                                            <div class="col-lg-5">
+                                                <div class="sign-up">
+                                                    <div class="sub-title">Клиника стоматологии</div>
+                                                    <div class="title">Мы рады вас видеть <br /> в нашей клинике</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="main-carousel__item">
+                                        <div class="row">
+                                            <div class="col-lg-5">
+                                                <div class="sign-up">
+                                                    <div class="sub-title">Опытные врачи</div>
+                                                    <div class="title">Наши врачи <br /> практикуют более <br /> 15 лет</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div>
-                                <div class="main-carousel__item">
-                                    <div class="row">
-                                        <div class="col-lg-5">
-                                            <div class="sign-up">
-                                                <div class="sub-title">Клиника стоматологии</div>
-                                                <div class="title">Мы рады вас видеть <br /> в нашей клинике</div>
-                                            </div>
-                                        </div>
-                                    </div>
+                            <div class="sign-up__row">
+                                <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
+                                <a href="works.html" class="btn btn-outline">Работы</a>
+                            </div>
+                            <div class="doctor">
+                                <div class="doctor__title">С вами с 2003 года</div>
+                                <div class="doctor__row">
+                                    <img src="./img/vaagn-main.png" class="doctor__img">
                                 </div>
+                                <a href="metal-ceramics.html" class="doctor__list wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="1s">
+                                    <img src="./img/tooth.svg" class="doctor__icon tooth" />
+                                    <p class="doctor__desc">Винир керамический за <strong>3 часа</strong></p>
+                                </a>
+                                <a href="dental-canal-treatment.html" class="doctor__list wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                    <img src="./img/microscope.svg" class="doctor__icon" />
+                                    <p class="doctor__desc">Лечение каналов, хирургия, ортопедия <strong>под микроскопом</strong></p>
+                                </a>
                             </div>
-                            <div>
-                                <div class="main-carousel__item">
-                                    <div class="row">
-                                        <div class="col-lg-5">
-                                            <div class="sign-up">
-                                                <div class="sub-title">Опытные врачи</div>
-                                                <div class="title">Наши врачи <br /> практикуют более <br /> 15 лет</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sign-up__row">
-                            <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
-                            <a href="works.html" class="btn btn-outline">Работы</a>
-                        </div>
-                        <div class="doctor">
-                            <div class="doctor__title">С вами с 2003 года</div>
-                            <div class="doctor__row">
-                                <img src="./img/vaagn-main.png" class="doctor__img">
-                            </div>
-                            <a href="metal-ceramics.html" class="doctor__list wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="1s">
-                                <img src="./img/tooth.svg" class="doctor__icon tooth" />
-                                <p class="doctor__desc">Винир керамический за <strong>3 часа</strong></p>
-                            </a>
-                            <a href="dental-canal-treatment.html" class="doctor__list wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                                <img src="./img/microscope.svg" class="doctor__icon" />
-                                <p class="doctor__desc">Лечение каналов, хирургия, ортопедия <strong>под микроскопом</strong></p>
-                            </a>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="phone-fixed">
-                <div class="phone-fixed__label">Записаться по номерам:</div>
-                <div class="phone-fixed__row">
-                    <div class="phone-fixed__icons">
-                        <img src="./img/whatsapp.svg">
-                        <img src="./img/viber.png">
+                <div class="phone-fixed">
+                    <div class="phone-fixed__label">Записаться по номерам:</div>
+                    <div class="phone-fixed__row">
+                        <div class="phone-fixed__icons">
+                            <img src="./img/whatsapp.svg">
+                            <img src="./img/viber.png">
+                        </div>
+                        <div class="phone-fixed__item">+7 (925) 741-10-25</div>
+                        <div class="phone-fixed__item">+7 (925) 741-10-25</div>
                     </div>
-                    <div class="phone-fixed__item">+7 (925) 741-10-25</div>
-                    <div class="phone-fixed__item">+7 (925) 741-10-25</div>
+                </div>
+            </div>
+            <div class="mobile-card">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+                            <div class="mobile-carousel">
+                                <div>
+                                    <div class="mobile-carousel__item">
+                                        <div class="sub-title">Современная техника</div>
+                                        <div class="title">Безопасность клиента <br /> наш девиз</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="mobile-carousel__item">
+                                        <div class="sub-title">Клиника стоматологии</div>
+                                        <div class="title">Мы рады вас видеть <br /> в нашей клинике</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="mobile-carousel__item">
+                                        <div class="sub-title">Опытные врачи</div>
+                                        <div class="title">Наши врачи <br /> практикуют более <br /> 15 лет</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mobile-services">
+                                <a href="metal-ceramics.html" class="doctor__list wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="1s">
+                                    <p class="doctor__desc">Винир керамический за <br /> <strong>3 часа</strong></p>
+                                </a>
+                                <a href="dental-canal-treatment.html" class="doctor__list wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                    <p class="doctor__desc">Лечение каналов, хирургия, ортопедия <br /> <strong>под микроскопом</strong></p>
+                                </a>
+                            </div>
+                            <div class="doctor__mobile">
+                                <img src="./img/doctor-mobile.png" class="doctor__img">
+                            </div>
+                            <div class="doctor__title">С вами с 2003 года</div>
+                            <div class="sign-up-mobile">
+                                <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
+                                <a href="works.html" class="btn btn-outline">Работы</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -654,11 +711,6 @@
 	<script src="js/scripts.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js" integrity="sha512-LGXaggshOkD/at6PFNcp2V2unf9LzFq6LE+sChH7ceMTDP0g2kn6Vxwgg7wkPP7AAtX+lmPqPdxB47A0Nz0cMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="./js/frontend.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            new WOW().init();
-        });
-    </script>
 
 </body>
 </html>
