--- a/app/metal-ceramics.html
+++ b/app/metal-ceramics.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Металлокерамика, безметалловая керамика</div>
                         <p class="content__desc">Протезирование металлокерамическими коронками сегодня наиболее часто применяемый метод в ортопедической стоматологии. </p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-1.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Скажем для начала, что в нашей клинике «ЕВВА-ДЕНТ» препарирование зубов производится с круговым уступом в 99,9% случаев. 
                         </p>
@@ -152,7 +152,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Металлокерамика с литым металлическим каркасом из КХС</div>
                         <p class="content__desc">
                             Это традиционный и испытанный вариант протезирования, который применяется уже более 30-ти лет многими стоматологами, но имеет ряд недостатков. Сначала отливается каркас коронки, затем послойно наносится керамическая масса на металл и обжигается в специальной печи. 
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -174,12 +174,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Металлокерамика с фрезерованным каркасом из КХС.</div>
                         <p class="content__desc">
                             Это современный метод изготовления, дающий очень точное прилегание каркаса коронки на уступах. В литературе метод фрезерования в стоматологии называют также CAD/CAM – технологией. 
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловая керамика с циркониевым каркасом</div>
                         <p class="content__desc">
                             Метод изготовления каркаса такой же, как у фрезерованных металлокерамических коронок. 
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-5.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -224,12 +224,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-6.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловые цельнокерамические коронки</div>
                         <p class="content__desc">
                             Это наиболее надежные коронки, имеющие хорошую прозрачность, эстетику. Изготавливаются они из цельного керамического материала, поэтому и мало подвержены сколам. 
@@ -249,7 +249,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловые цельнокерамические конструкции</div>
                         <p class="content__desc">
                             CEREC (Chairside Economical Restorations of Esthetic Ceramiс) - аппарат для экономичной и эстетичной керамической реставрации. Это комплекс из технологии, оборудования и материалов для изготовления зубных микропротезов (вкладок, виниров, коронок), шлифуемых из керамических блоков с применением специализированной CAD/CAM системы. Разработан в университете Цюриха.
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-7.jpg" class="img-responsive">
                     </div>
                 </div>
