--- a/app/professional-oral-hygiene.html
+++ b/app/professional-oral-hygiene.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Профессиональная гигиена полости рта</div>
                         <p class="content__desc">Профгигиена полости рта является самой часто применяемой процедурой в любой клинике.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/professional-1.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div class="img-row-botom left">
+                    <div class="img-row-botom left wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/professional-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Гигиена</div>
                         <div class="title">Air-flow</div>
                         <p class="content__desc">
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Ультразвуковые скейлеры</div>
                         <div class="title">EMS</div>
                         <p class="content__desc">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/professional-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -164,12 +164,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div class="img-row-botom left">
+                    <div class="img-row-botom left wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/professional-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Иногда профгигиену врачи называют механическим отбеливанием, хотя это не совсем верно, но близко по смыслу и понятно для пациентов. 
                         </p>
