--- a/app/works.html
+++ b/app/works.html
@@ -90,8 +90,8 @@
                     <div class="col-lg-2">
                         <div class="phone">
                             <img src="./img/phone-icon.svg">
-                            <div class="phone__item">+7 (925) 741-10-25</div>
-                            <div class="phone__item">+7 (499) 142-17-01</div>
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                         </div>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="title">Наши работы</div>
-                    <div class="desc">Безболезненное и безопасное лечение</div>
+                    <div class="title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">Наши работы</div>
+                    <div class="desc wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.7s">Безболезненное и безопасное лечение</div>
                 </div>
                 <div class="col-12">
                     <div class="works">
