--- a/app/implants.html
+++ b/app/implants.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Имплантация</div>
                         <p class="content__desc">Имплантация – это операция по вживлению импланта на верхней или нижней челюсти пациента. Имплант представляет собой сложную винтовую конструкцию с наружной и внутренней резьбой. </p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implants.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implants-1.png" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content  wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Наружная резьба импланта играет важную роль при оссеоинтеграции импланта. Внутренняя резьба служит для крепления аббатмента. Если сам имплант находится под десной в кости, то аббатмент является той частью, которая возвышается над десной. К нему уже крепятся коронки с помощью винтов или цементов. Более 60 лет назад шведский ученый Бранемарк перевернул весь мир, выявив свойство титана срастаться с костью. 
                         </p>
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Системы имплантации</div>
                         <div class="title">ASTRA-TECH и ALPHA-BIO</div>
                         <p class="content__desc">В нашей клинике мы работаем двумя системами имплантации. Это ASTRA-TECH (Швеция) и ALPHA-BIO (Израиль).</p>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-botom">
+                    <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implant-2.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -160,12 +160,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="img-center">
+                    <div class="img-center  wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implant-3.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Системы имплантации</div>
                         <div class="title">VarioSurg NSK</div>
                         <p class="content__desc">
