--- a/app/karakhanyan-vaagn.html
+++ b/app/karakhanyan-vaagn.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Главный врач</div>
                         <div class="title">Караханян Ваагн Теванович</div>
                         <div class="chart">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/vaagn.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -134,12 +134,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/vaagn-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">  
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">  
                         <ul class="content__row">
                             <li>Караханян Ваагн Теванович окончил стоматологический факультет Ереванского государственного медицинского института в 1993 году.</li>
                             <li>Интернатура пройдена в 4-ой городской стоматологической поликлинике г.Гомеля в 1993-1995гг. по специальности стоматология. </li>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             За прошедшие годы работы по специальности зарекомендовал себя как добросовестный, грамотный специалист, работающий прежде всего в русле постоянного повышения качества оказываемых стоматологических услуг.                      
                         </p>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-botom">
+                    <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/vaagn-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -180,12 +180,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/vaagn-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Действительный член Ассоциации имплантологов России. В 2003 году защитил кандидатскую диссертацию в Московском государственном медико-стоматологическом университете (МГМСУ) им. Евдокимова. 
                         </p>
@@ -205,51 +205,81 @@
             <div class="row">
                 <div class="col-12">
                     <div class="certificates">
-                        <div>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-1.jpg">
                             <img src="./img/certificate-1.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-2.jpg">
                             <img src="./img/certificate-2.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-3.jpg">
                             <img src="./img/certificate-3.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-4.jpg">
                             <img src="./img/certificate-4.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-5.jpg">
                             <img src="./img/certificate-5.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-6.jpg">
                             <img src="./img/certificate-6.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-7.jpg">
                             <img src="./img/certificate-7.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-8.jpg">
                             <img src="./img/certificate-8.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-9.jpg">
                             <img src="./img/certificate-9.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-10.jpg">
                             <img src="./img/certificate-10.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-11.jpg">
                             <img src="./img/certificate-11.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-12.jpg">
                             <img src="./img/certificate-12.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-13.jpg">
                             <img src="./img/certificate-13.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-14.jpg">
                             <img src="./img/certificate-14.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-15.jpg">
                             <img src="./img/certificate-15.jpg" class="img-responsive">
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
