--- a/app/kolobaeva-natalia.html
+++ b/app/kolobaeva-natalia.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Врач-стоматолог первой категории</div>
                         <div class="title">Колобаева Наталья Вячеславовна</div>
                         <div class="chart">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/natalia-1.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -134,12 +134,12 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/natalia-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">  
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">  
                         <p class="content__desc">
                             2003– 2004  стоматолог-терапевт частная клиника 
                             г. Москва сентябрь 2004 г. г.– настоящее время – стоматолог-терапевт, ортопед ООО «ЕВВА-ДЕНТ», 
@@ -167,7 +167,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Специализация: лечение каналов, эстетические реставрации, отбеливание, пародонтология, протезирование зубов с применением металлокерамики, безметалловой керамики, виниров, съемное протезирование.
                         </p>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-botom">
+                    <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/natalia-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -193,33 +193,51 @@
                 </div>
                 <div class="col-12">
                     <div class="certificates">
-                        <div>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-1.jpg">
                             <img src="./img/certificate-natalia-1.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-2.jpg">
                             <img src="./img/certificate-natalia-2.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-3.jpg">
                             <img src="./img/certificate-natalia-3.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-4.jpg">
                             <img src="./img/certificate-natalia-4.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-5.jpg">
                             <img src="./img/certificate-natalia-5.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-6.jpg">
                             <img src="./img/certificate-natalia-6.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-7.jpg">
                             <img src="./img/certificate-natalia-7.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-8.jpg">
                             <img src="./img/certificate-natalia-8.jpg" class="img-responsive">
-                        </div>
-                        <div>
+                        </a>
+                        <a 
+                            data-fancybox="certificate"
+                            data-src="./img/certificate-natalia-9.jpg">
                             <img src="./img/certificate-natalia-9.jpg" class="img-responsive">
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
