--- a/app/reviews.html
+++ b/app/reviews.html
@@ -95,8 +95,8 @@
                         <div class="col-lg-2">
                             <div class="phone">
                                 <img src="./img/phone-icon.svg">
-                                <div class="phone__item">+7 (925) 741-10-25</div>
-                                <div class="phone__item">+7 (499) 142-17-01</div>
+                                <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                                <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                             </div>
                         </div>
                     </div>
@@ -106,8 +106,8 @@
                 <div class="row">
                     <div class="col">
                         <div class="teeth-card">
-                            <img src="./img/teeth.png">
-                            <div class="teeth-card__content">
+                            <img src="./img/teeth.png" class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
+                            <div class="teeth-card__content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                                 Дорогие пациенты клиники <br />
                                 <strong>Евва-Дент</strong>! Мы будем Вам очень признательны, если вы оставите свое мнение о вашем пребывании в клинике в данном разделе.
                             </div>
