--- a/app/security.html
+++ b/app/security.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -114,16 +114,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="security">
-                        <div class="security__item">
-                            <div class="security__title">15 лет</div>
+                        <div class="security__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                            <div class="security__title"><span class="count" data-stop="15">15</span> лет</div>
                             <div class="security__desc">Опыта</div>
                         </div>
-                        <div class="security__item">
-                            <div class="security__title">32</div>
+                        <div class="security__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                            <div class="security__title"><span class="count" data-stop="32">32</span></div>
                             <div class="security__desc">Специалистов</div>
                         </div>
-                        <div class="security__item">
-                            <div class="security__title">1034</div>
+                        <div class="security__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
+                            <div class="security__title"><span class="count" data-stop="1034">1034</span></div>
                             <div class="security__desc">Довольных пациентов</div>
                         </div>
                     </div>
@@ -135,12 +135,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-2.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
                             АВТОКЛАВ MELAG
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">3М-ESPE</div>
                         <p class="content__desc">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-3.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -202,12 +202,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-4.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
                             МОРИТА <br /> DENTAPORT ZX
@@ -228,12 +228,12 @@
             <div class="row justify-content-end align-items-center">
                 <div class="col-5">
                     <div class="content">
-                        <div class="sub-title">Техника</div>
-                        <div class="title">HELIODENT PLUS</div>
-                        <p class="content__desc">
+                        <div class="sub-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">Техника</div>
+                        <div class="title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.7s">HELIODENT PLUS</div>
+                        <p class="content__desc wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.9s">
                             Для быстрой и безопасной интраоральной рентгенографии Ваша клиника обязательно должна быть оснащена системой, управлять которой Вам будет легко и просто. Интерфейс пользователя системы должен быть понятным и обеспечивать возможность интуитивного управления. 
                         </p>
-                        <p class="content__desc last">
+                        <p class="content__desc last  wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                             HELIODENTPLUS – это интраоральная рентгенографическая система новейшего поколения, ориентированная на потребности Ваших специалистов. Она долговечна и полностью отвечает всем Вашим требованиям.
                         </p>
                     </div>
@@ -245,7 +245,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
                             АППАРАТ УЛЬТРАЗВУКОВОЙ EMS (США)
@@ -259,7 +259,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-right">
+                    <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-6.jpg" class="img-responsive">
                     </div>
                 </div>
