--- a/app/staff.html
+++ b/app/staff.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,6 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
+                    <div class="title">Мы рады вас видеть <br /> в нашей клинике</div>
                     <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
                 </div>
             </div>
@@ -109,13 +110,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="title">Персонал</div>
-                    <div class="desc">Мы обеспечиваем самое высокое качество ухода для каждого пациента</div>
+                    <div class="title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">Персонал</div>
+                    <div class="desc wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.7s">Мы обеспечиваем самое высокое качество ухода для каждого пациента</div>
                 </div>
             </div>
             <div class="staff">
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                         <img src="./img/person-2.png" class="img-responsive person__img">
                         <div class="person__content">
                             <div class="person__name">Караханян  Ваагн Теванович</div>
@@ -128,7 +129,7 @@
                     </div>
                 </div>
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                         <img src="./img/person-1.png" class="img-responsive person__img">
                         <div class="person__content">
                             <div class="person__name">Колобаева Наталья Вячеславовна</div>
@@ -144,7 +145,7 @@
                     </div>
                 </div>
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                         <img src="./img/person-3.png" class="img-responsive person__img">
                         <div class="person__content">
                             <div class="person__name">Кожухова Арина Петровна</div>
@@ -157,7 +158,7 @@
                     </div>
                 </div>
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                         <img src="./img/person-4.png" class="img-responsive person__img">
                         <div class="person__content auto">
                             <div class="person__name">Абдуразвкова Азиза</div>
@@ -166,7 +167,7 @@
                     </div>
                 </div>
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                         <img src="./img/person-5.jpg" class="img-responsive person__img">
                         <div class="person__content auto">
                             <div class="person__name">Матвеев Илья</div>
@@ -175,10 +176,10 @@
                     </div>
                 </div>
                 <div class="staff__item">
-                    <div class="person">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                         <img src="./img/person-6.jpg" class="img-responsive person__img">
                         <div class="person__content auto">
-                            <div class="person__name">Чернышева Виктория</div>
+                            <div class="person__name">Чернышева Ксения</div>
                             <div class="person__label">Старший администратор</div>
                         </div>
                     </div>
