--- a/app/visiographic-examination-of-teeth.html
+++ b/app/visiographic-examination-of-teeth.html
@@ -89,8 +89,8 @@
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
-                        <div class="phone__item">+7 (925) 741-10-25</div>
-                        <div class="phone__item">+7 (499) 142-17-01</div>
+                        <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                        <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
                 </div>
             </div>
@@ -100,14 +100,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Визиографическое обследование зубов</div>
                         <p class="content__desc">Сегодня отошли в прошлое прицельные рентгенологические снимки, проявляющиеся затем на пленку.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-arround">
+                    <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/visiographic.jpg" class="img-responsive">
                     </div>
                 </div>
@@ -118,12 +118,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <div>
+                    <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/visiographic-1.jpg" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Sirona</div>
                         <p class="content__desc">
                             Цифровые технологии давно и прочно закрепились в медицине, особенно в стоматологической практике. Для современного рентгенологического обследования необходимо иметь рентгенологическую трубку, датчик визиографа со своим модулем и компьютер со специализированной программой. 
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-5">
-                    <div class="content">
+                    <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Это, в 1-ую очередь, минимальная доза облучения (от 10 до 20 раз), так как время экспозиции (облучения) во много раз меньше, чем при обычном снимке.  
                         </p>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="img-row-botom right">
+                    <div class="img-row-botom right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/visiographic-2.jpg" class="img-responsive">
                     </div>
                 </div>
